--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -21,9 +21,10 @@
   color: $text-color;
   padding: 0 30px;
   .avatar {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    // border-radius: 50%;
+    width: 150px; 
+    margin-bottom: 20px;
+    // height: 100px;
     float: none;
     @include media-query($medium-screen) {
       // margin-right: 0;
