--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
   {% else %}
   "{{ site.url }}/img/{{ page.image.feature }}"
   {% endif %}
-  alt="{{ page.title | escape }} feature image" style="{{ page.image.stlye }}">
+  alt="{{ page.title | escape }} feature image" >
 
   {% if page.image.credit %}
   <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
