--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -44,7 +44,7 @@ layout: default
 
     {% if post.image.feature %}
     <div class="post-image-feature">
-      <img src=
+      <img style="{{post.image.styles}}" src=
       {% if post.image.feature contains 'http' %}
       "{{ post.image.feature }}"
       {% else %}
