--- a/_includes/js.html
+++ b/_includes/js.html
@@ -3,14 +3,14 @@
 {% if site.owner.google.analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155299423-1"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155299423-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-155299423-1');
-</script>
+</script> -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
