--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="{{ site.url }}/js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="{{ site.url }}/js/main.js"></script>
+<script type="text/javascript" src="{{ site.url }}/js/main.js" id="{{site.owner.google.analytics}}"></script>
 {% if site.owner.google.analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
