--- a/_includes/js.html
+++ b/_includes/js.html
@@ -21,3 +21,10 @@
 </script> -->
 
 {% endif %}
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155299423-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-155299423-1');
+</script> 
