--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,18 +1,21 @@
 <script type="text/javascript" src="{{ site.url }}/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}/js/main.js"></script>
-<div>
-  {{ site.url }}>
-</div>
 {% if site.owner.google.analytics %}
 <!-- Asynchronous Google Analytics snippet -->
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155299423-1"></script>
+<!--
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155299423-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'UA-155299423-1');
-</script> -->
+</script>
+
+-->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
